src/test/run-pass/log-err-phi.rs


fn main() { if false { log(error, "foo" + "bar"); } }
